Fixed footerAlign & ratingAlign on small widths
TODO: broken images on SAFARI + NAV auto-close when changing pages + (optional) product-specific reviews to increase credibility

--- a/css/main.css
+++ b/css/main.css
@@ -132,12 +132,12 @@ footer {
 }
 
 /* for styleguide */
-/* textarea {
+textarea {
    width: 100%;
-   height: 15rem;
-   padding-left: 1rem;
+   /* height: auto; */
+   /* padding-left: 1rem; */
    border: 0.01rem solid #ddd;
-} */
+}
 /* END OF GENERAL STYLING --------------------------------------
 ---------------------------------------------------------
 */
@@ -546,11 +546,11 @@ a .responsive-image:hover {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
+   text-align: center;
    margin: 1rem;
    /* align-items: top; */
 
    font-size: 0.8rem;
-   text-align: left;
    color: rgb(154, 171, 185);
    text-decoration: none;
 
